--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
     "@types/multer": "^2.0.0",
+    "@types/xlsx": "^0.0.36",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "fast-csv": "^5.0.2",
     "firebase-admin": "^13.4.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
